# loca7

./: .dockerignore  .editorconfig  .env.example  .gitignore  .gitlab-ci.yml  .issuesmatrix.json  .prettierignore  .prettierrc  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  ensure-dotenv  entrypoint.sh  generate-dotenv.py  init-dev-db.sql  manage.py  package.json  pnpm-lock.yaml  pyproject.toml  rollup.config.js  svelte.config.js  update-staging
.ortfo/: description.md
front/: package.json  pnpm-lock.yaml  rollup.config.js  svelte.config.js
front/src/: app.html
loca7/: asgi.py  settings.py  urls.py  wsgi.py
mail-templates/: _layout.mjml  account-created.mjml  announcement.mjml  appartment-edit-to-validate.mjml  appartment-to-validate.mjml  email-changed.mjml  liked-appartment-was-archived.mjml  liked-appartment-was-deleted.mjml  liked-appartment-was-edited.mjml  liked-appartment-was-unarchived.mjml  password-changed.mjml  plain.mjml  reset-password.mjml  updateTypes.ts  validate-email.mjml  your-appartment-was-approved.mjml  your-appartment-was-archived.mjml  your-appartment-was-deleted.mjml  your-appartment-was-reported.mjml  your-appartment-was-unarchived.mjml  your-edit-was-approved.mjml
mailhog/: outgoing.json
prisma/: schema.prisma
public/: global.css  robots.txt  tisseo-stops.json
scripts/: build.sh  createSuperuser.js  fixDescriptions.js  fixDuplicatePhones.js  importOldData.ts  numberOfAppartmentsPerOwner.js  prepareURL.sh  refreshTisseoData.py  seed.ts
src/: app.d.ts  app.html  hooks.server.ts
static/: global.css
(+318 files in other folders)
